(EUREKA) A try to secure the cluster using ssl

--- a/eureka/config-service/src/main/resources/bootstrap.yml
+++ b/eureka/config-service/src/main/resources/bootstrap.yml
@@ -1,6 +1,11 @@
 server:
   port: 8000
-  
+  #ssl:
+    #enabled: true
+    #key-store: classpath:client.jks
+    #key-store-password: kronos
+    #key-alias: client
+
 spring:
   application:
     name: config-service
