--- a/eureka/config-service/src/main/resources/config/gateway-service.yml
+++ b/eureka/config-service/src/main/resources/config/gateway-service.yml
@@ -1,10 +1,24 @@
 server:
   port: 8002
-
+    
+management:
+  server:
+    port: 9002
+    servlet:
+      context-path: /api/management
+  endpoints:
+    web:
+      base-path: /actuator
+      exposure:
+        include: "*"
+    
 zuul:
   routes:
     protected-service:
       path: /api/protected-service/** 
       serviceId: protected-service
       strip-prefix: true
-    
+          
+eureka:
+  instance:
+    homePageUrl: http://localhost:8000
